--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,14 @@ dependencies = [
     "pydantic>=2.0.0",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "types-PyYAML>=6.0",
+    "mypy>=1.0.0",
+    "pytest>=7.0.0",
+    "ruff>=0.1.0",
+]
+
 [project.scripts]
 bioetl = "bioetl.cli:app"
 
