--- a/src/bioetl/infrastructure/clients/base/abc_registry.yaml
+++ b/src/bioetl/infrastructure/clients/base/abc_registry.yaml
@@ -23,6 +23,8 @@ TracerABC: bioetl.infrastructure.logging.contracts.TracerABC
 
 HasherABC: bioetl.domain.transform.contracts.HasherABC
 NormalizationServiceABC: bioetl.domain.transform.contracts.NormalizationServiceABC
+RecordSourceABC: bioetl.clients.records.contracts.RecordSourceABC
+RecordNormalizationServiceABC: bioetl.clients.records.contracts.RecordNormalizationServiceABC
 
 ValidatorABC: bioetl.domain.validation.contracts.ValidatorABC
 SchemaProviderABC: bioetl.domain.validation.contracts.SchemaProviderABC
