--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "requests>=2.31.0",
     "PyYAML>=6.0",
     "pydantic>=2.0.0",
+    "fastapi>=0.110.0",
 ]
 
 [project.optional-dependencies]
