--- a/.github/workflows/import-linter.yml
+++ b/.github/workflows/import-linter.yml
@@ -25,6 +25,9 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install .[dev]
 
+      - name: Run architecture import guard
+        run: pytest tests/architecture/test_layer_dependencies.py
+
       - name: Run import-linter (warn mode)
         run: lint-imports --config .importlinter
         continue-on-error: true
