--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,10 @@ dev = [
     "mypy>=1.0.0",
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
+    "black>=24.3.0",
+    "isort>=5.12.0",
     "ruff>=0.1.0",
+    "pre-commit>=3.5.0",
     "import-linter>=2.0.0",
 ]
 
@@ -44,4 +47,52 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["bioetl"]
+combine_as_imports = true
+force_sort_within_sections = true
+src_paths = ["src", "tests"]
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+src = ["src", "tests"]
+respect-gitignore = true
+select = ["E", "F", "I"]
+ignore = []
+
+[tool.mypy]
+python_version = "3.11"
+mypy_path = ["src"]
+namespace_packages = true
+explicit_package_bases = true
+ignore_missing_imports = true
+warn_unused_configs = true
+warn_return_any = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+no_implicit_optional = true
+implicit_reexport = true
+show_error_codes = true
+
+[[tool.mypy.overrides]]
+module = ["tests.*"]
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = [
+  "bioetl.infrastructure.*",
+  "bioetl.interfaces.*",
+]
+ignore_errors = true
 
