--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,7 @@
     ],
     "python.linting.pylintArgs": [
         "--ignore=tests/services"
-    ]
+    ],
+    "workbench.editor.enablePreviewFromQuickOpen": false,
+    "workbench.editor.enablePreviewFromCodeNavigation": false
 }
