--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pandera>=0.18.0",
     "typer>=0.9.0",
     "rich>=13.0.0",
+    "structlog>=24.0.0",
     "requests>=2.31.0",
     "PyYAML>=6.0",
     "pydantic>=2.0.0",
