--- a/.github/workflows/duplication-complexity.yml
+++ b/.github/workflows/duplication-complexity.yml
@@ -42,7 +42,7 @@ jobs:
           node-version: "20"
 
       - name: Run jscpd for duplication detection
-        run: npx jscpd@latest --path src --path tests --threshold 5 --reporters "console,html,json" --output reports/jscpd
+        run: npx jscpd@latest src tests --threshold 5 --reporters "console,html,json" --output reports/jscpd
 
       - name: Upload reports
         uses: actions/upload-artifact@v4
