--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "typer>=0.9.0",
     "rich>=13.0.0",
     "structlog>=24.0.0",
+    "tqdm>=4.66.0",
     "requests>=2.31.0",
     "PyYAML>=6.0",
     "pydantic>=2.0.0",
