refactor: move logging and output contracts to clients base

--- a/src/bioetl/infrastructure/clients/base/abc_impls.yaml
+++ b/src/bioetl/infrastructure/clients/base/abc_impls.yaml
@@ -48,3 +48,7 @@ MetadataWriterABC:
   implementations:
     Standard: bioetl.infrastructure.output.impl.metadata_writer.MetadataWriterImpl
 
+QualityReportABC:
+  default_factory: bioetl.infrastructure.output.factories.default_quality_reporter
+  implementations:
+    Default: bioetl.infrastructure.output.impl.quality_report.QualityReportImpl
