--- a/.github/workflows/import-linter.yml
+++ b/.github/workflows/import-linter.yml
@@ -31,8 +31,7 @@ jobs:
         run: ruff check src tests
 
       - name: Black (format check)
-        run: |
-          black --check src tests
+        run: black --check src tests
 
       - name: Isort (import order)
         run: isort --check-only src tests
