docs: update normalization and provider registry docs

--- a/src/bioetl/infrastructure/clients/base/abc_impls.yaml
+++ b/src/bioetl/infrastructure/clients/base/abc_impls.yaml
@@ -41,6 +41,7 @@ NormalizationServiceABC:
   default_factory: bioetl.infrastructure.transform.factories.default_normalization_service
   implementations:
     Default: bioetl.infrastructure.transform.impl.normalization_service_impl.NormalizationServiceImpl
+    Chembl: bioetl.infrastructure.transform.impl.chembl_normalization_service.ChemblNormalizationService
 
 HasherABC:
   default_factory: bioetl.infrastructure.transform.factories.default_hasher
